fix phone spacing about.scss

--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -121,7 +121,7 @@
       .learning {
         display: flex;
 
-        @include mediaMax($smPhone) {
+        @include mediaMax($phone) {
           width: min-content;
         }
 
